fix(component-carousel): image gallery mobile alignment fixes

--- a/packages/component-carousel/src/core/components/BaseCarousel/glide/glide.theme.scss
+++ b/packages/component-carousel/src/core/components/BaseCarousel/glide/glide.theme.scss
@@ -356,7 +356,8 @@ $uds-color-brand-gold: #ffc627; // ASU Gold brand color
       }
     }
     &.image-gallery {
-      margin: auto 20px !important;
+      width: calc(100% - 40px);
+      margin: auto !important;
       .image-navigator .image-navigator-images .glide__arrows .glide__arrow {
         display: none;
       }
